<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">API Demos</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_layout">LayoutActivity</string>
    <string name="title_activity_linear_layout">LinearLayoutActivity</string>
    <string name="title_activity_relative_layout">RelativeLayoutActivity</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_date_picker_dialog">DatePickerDialogActivity</string>
    <string name="title_activity_table_layout">TableLayoutActivity</string>
    <string name="title_activity_frame_layout">FrameLayoutActivity</string>
    <string name="title_activity_grid_layout">GridLayoutActivity</string>
    <string name="title_activity_seek_bar">SeekBarActivity</string>
    <string name="title_activity_progress_bar">ProgressBarActivity</string>
    <string name="title_activity_progress_dialog">ProgressDialogActivity</string>
    <string name="title_activity_sundries">SundriesActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_action_bar">ActionBarActivity</string>
    <string name="btn_show_progress_dialog">Show ProgressDialog</string>
    <string name="btn_show_notification">Show Notification</string>
    <string name="title_activity_adapter_view">AdapterViewActivity</string>
    <string name="title_activity_auto_complete_text_view">AutoCompleteTextViewActivity</string>
    <string name="actv">AutoCompleteTextView</string>
    <string name="mactv">MultiAutoCompleteTextView</string>
    <string name="title_activity_button">ButtonActivity</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="orientation">禁止横屏</string>
    <string name="title_activity_xml">XmlActivity</string>
    <string name="title_activity_assets">AssetsActivity</string>
    <string name="title_activity_shared_preferences">SharedPreferencesActivity</string>
    <string name="Shared_Preferences_checkBox">启动弹出Dialog</string>
    <string name="title_activity_file_save">FileSaveActivity</string>
    <string name="savetext">保存</string>
    <string name="editText1">Type something</string>
    <string name="title_activity_sdsave">SDSaveActivity</string>
    <string name="title_activity_sqlite">SQLiteActivity</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="title_activity_file_list">FileListActivity</string>
    <string name="user_img">用户头像</string>
    <string name="username">用户名:</string>
    <string name="password">密码</string>
    <string name="title_activity_tab_nav">TabNavActivity</string>
    <string name="title_activity_looo">LoooActivity</string>
    <string name="title_activity_base_sample">BaseSampleActivity</string>
    <string name="title_activity_listview_refres">ListviewRefresActivity</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="title_activity_motion_sersor">MotionSersorActivity</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_socket">SocketActivity</string>
    <string name="ip">ip</string>
    <string name="send">send</string>
    <string name="text">text</string>
    <string name="title_activity_rating_bar">RatingBarActivity</string>
    <string name="title_activity_my_view">MyViewActivity</string>

</resources>
