<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/exit"
        android:title="@string/exit"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"/>
    <item
        android:id="@+id/setting"
        android:title="@string/setting">
        <menu>
            <group android:id="@+id/option" >
                <item
                    android:id="@+id/orientation"
                    android:checkable="true"
                    android:enabled="true"
                    android:title="@string/orientation"/>
                <item
                    android:id="@+id/abc"
                    android:checkable="true"
                    android:enabled="true"
                    android:title="选项2"/>
                <item
                    android:id="@+id/abcd"
                    android:checkable="true"
                    android:enabled="true"
                    android:title="选项3"/>
            </group>
        </menu>
    </item>

</menu>